# packages/api-schema/openapi/core.json
@@ -7606,6 +7606,10 @@
             "type": "boolean",
             "title": "Offline Read Cursors"
           },
+          "offline_social_read_cursors": {
+            "type": "boolean",
+            "title": "Offline Social Read Cursors"
+          },
           "offline_support_ticket_creation": {
             "type": "boolean",
             "title": "Offline Support Ticket Creation"
@@ -7629,6 +7633,7 @@
           "offline_social_messages",
           "offline_support_messages",
           "offline_read_cursors",
+          "offline_social_read_cursors",
           "offline_support_ticket_creation"
         ],
         "title": "MobileBuildCapabilitiesV1"
@@ -9259,6 +9264,10 @@
             "type": "boolean",
             "title": "Offline Read Cursors"
           },
+          "offline_social_read_cursors": {
+            "type": "boolean",
+            "title": "Offline Social Read Cursors"
+          },
           "offline_support_ticket_creation": {
             "type": "boolean",
             "title": "Offline Support Ticket Creation"
@@ -9282,6 +9291,7 @@
           "offline_social_messages",
           "offline_support_messages",
           "offline_read_cursors",
+          "offline_social_read_cursors",
           "offline_support_ticket_creation"
         ],
         "title": "TenantCapabilities"
